add update user with authorized