@@ -1,5 +1,6 @@
 package com.senior.dreamteam.services;
 
+import com.senior.dreamteam.authentication.JwtTokenUtil;
 import com.senior.dreamteam.entities.Authorities;
 import com.senior.dreamteam.entities.Roles;
 import com.senior.dreamteam.exception.DemoGraphqlException;
@@ -8,25 +9,28 @@ import com.senior.dreamteam.repositories.AuthoritiesRepository;
 import com.senior.dreamteam.repositories.TagProblemRepository;
 import com.senior.dreamteam.entities.User;
 import com.senior.dreamteam.repositories.UserRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
+@Slf4j
+@RequiredArgsConstructor
 public class UserService {
 
-    @Autowired
-    TagProblemRepository tagProblemRepository;
+    final TagProblemRepository tagProblemRepository;
+    final UserRepository userRepository;
+    final AuthoritiesRepository authoritiesRepository;
 
-    @Autowired
-    UserRepository userRepository;
-
-    @Autowired
-    AuthoritiesRepository authoritiesRepository;
+    final JwtTokenUtil jwtTokenUtil;
     private final PasswordEncoder encoder = new BCryptPasswordEncoder();
 
     public List<User> findAll() {
@@ -41,7 +45,7 @@ public class UserService {
         return userRepository.findUserByEmail(email).orElseThrow(() -> new DemoGraphqlException("This user not found"));
     }
 
-    public User addUser(String role, String name, String email, String password) {
+    public User addUser(String name, String email, String password) {
         if (!userRepository.findUserByEmail(email).isEmpty()) {
             throw new DemoGraphqlException("This email have already registered");
         }
@@ -56,18 +60,42 @@ public class UserService {
         return userRepository.save(newUser);
     }
 
-    public User updateUser(int id, String role, String name, String email, String password) {
-        Optional<User> optionalUser = userRepository.findUserByEmail(email);
-        User user = optionalUser.orElseThrow(() -> new DemoGraphqlException("This user not found"));
+    public User updateUser(String emailFromToken, int id, String authorities, String name, String email) {
+        User userFromToken = userRepository.findUserByEmail(emailFromToken).orElseThrow(() -> new DemoGraphqlException("This user not found"));
 
-        if ("admin".equalsIgnoreCase(role)) {
-            user.setAuthorities(List.of(getAuthorityByName(Roles.ADMIN)));
+        boolean isAdmin = userFromToken.getAuthorities()
+                .stream()
+                .anyMatch(authority -> Roles.ADMIN.toString().equalsIgnoreCase(authority.getAuthority()));
+        if(!isAdmin){
+            if(!email.equals(userFromToken.getUsername()) || authorities.contains(Roles.ADMIN.toString())){
+                log.info("Unauthorized: Cannot Update this User");
+                return User.builder().build();
+            }
+        }
+        User user = userRepository.findUserByEmail(email).orElseThrow(() -> new DemoGraphqlException("This user not found"));
+
+        List<Authorities> authoritiesList = authoritiesRepository.findAll();
+        List<String> roleList = Arrays.asList(authorities.split(", "));
+
+        boolean allRolesCorrect = roleList.stream()
+                .allMatch(role -> authoritiesList.stream()
+                        .anyMatch(authority -> authority.getName().toString().equals(role)));
+
+        if (allRolesCorrect) {
+            List<Authorities> userAuthorities = roleList.stream()
+                    .map(role -> authoritiesList.stream()
+                            .filter(authority -> authority.getName().toString().equals(role))
+                            .findFirst()
+                            .orElse(null))
+                    .filter(Objects::nonNull)
+                    .collect(Collectors.toList());
+            user.setAuthorities(userAuthorities);
         } else {
-            user.setAuthorities(List.of(getAuthorityByName(Roles.USER)));
+            log.error("Incorrect update role");
+            return User.builder().build();
         }
         user.setName(name);
         user.setEmail(email);
-        user.setPassword(encoder.encode(password));
         userRepository.save(user);
         return user;
     }
